track row index aligned end

--- a/MusicPlayer/Spotify/Pages/Items/TrackRow.razor.css
+++ b/MusicPlayer/Spotify/Pages/Items/TrackRow.razor.css
@@ -61,7 +61,7 @@
 
 .track-number {
     display: flex;
-    justify-content: center;
+    justify-content: end;
     align-items: end;
     color: #B3B3B3;
 }
