--- a/MusicPlayer/Spotify/Pages/Items/TrackList.razor
+++ b/MusicPlayer/Spotify/Pages/Items/TrackList.razor
@@ -1,4 +1,5 @@
 ﻿@using Spotify.Data.Images
+@using Humanizer
 
 <div class="page-wrapper">
     <div class="info-container">
@@ -45,15 +46,13 @@
                         <i class="ph-fill ph-spotify-logo"></i>
                         <a href="https://open.spotify.com/user/spotify" target="_blank">Spotify</a>
                     </div>
+
                     <span class="dot-separator">•</span>
-                    @if (TrackCount == 1)
-                    {
-                        <span class="songs-count"> @TrackCount song,&nbsp; </span>
-                    }
-                    else if (TrackCount > 1)
-                    {
-                        <span class="songs-count"> @TrackCount songs,&nbsp; </span>
-                    }
+
+                    <span class="songs-count">
+                        @($"{"song".ToQuantity(TrackCount, ShowQuantityAs.Numeric)}")
+                        &nbsp;
+                    </span>
 
                     @if (TotalDurationTime.Hours < 1)
                     {
