track list comma after songs count added

--- a/MusicPlayer/Spotify/Pages/Items/TrackList.razor
+++ b/MusicPlayer/Spotify/Pages/Items/TrackList.razor
@@ -50,7 +50,7 @@
                     <span class="dot-separator">•</span>
 
                     <span class="songs-count">
-                        @($"{"song".ToQuantity(TrackCount, ShowQuantityAs.Numeric)}")
+                        @($"{"song".ToQuantity(TrackCount, ShowQuantityAs.Numeric)},")
                         &nbsp;
                     </span>
 
