--- a/MusicPlayer/Spotify/Pages/Items/TrackRow.razor
+++ b/MusicPlayer/Spotify/Pages/Items/TrackRow.razor
@@ -1,7 +1,7 @@
 ﻿<div class="track-entry" tabindex="-1" @ondblclick="@(async() => await OnDoubleClickCallback.InvokeAsync(Index - 1))">
     <div class="track-number">
         <div class="track-number-index">
-            @if (CurrentPlayingTrackId == Id)
+            @if (IsPlaying)
             {
                 <img height="14" src="/assets/gif/equaliser-animated.gif">
             }
@@ -59,8 +59,7 @@
     [Parameter]
     public EventCallback<int> OnDoubleClickCallback { get; set; }
 
-    [CascadingParameter]
-    public Guid CurrentPlayingTrackId { get; set; }
+    public bool IsPlaying { get; set; }
 
     public TrackModel? Track { get; set; }
 
